--- a/chatclient/chat-app/src/index.css
+++ b/chatclient/chat-app/src/index.css
@@ -62,7 +62,9 @@ button{
   border: 1px solid #000;
   overflow-y: scroll;
 }
-
+::-webkit-scrollbar {
+  width: 0px;
+}
 .send-message{
   width: 100%;
   display: flex;
@@ -70,19 +72,71 @@ button{
 }
 
 .input-message{
-  width:90%;
-  border-radius: 50px;
+  box-sizing: border-box;
+  flex: 1 1 auto;
+  width: inherit;
+  min-width: 0;
+  min-height: 20px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 20px;
+  outline: none;
+  will-change: width;
 }
 
 ul {
   padding: 0;
   list-style-type: none;
 }
-.send-button{
-  width:10%;
-  border-radius: 50px;
-  margin-left: 5px;
+
+.send-button {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
   cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 100%;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.send-button:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
+
+.send-button:hover {
+  background-color: #2c974b;
+}
+
+.send-button:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.send-button:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.send-button:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
 .member{
   padding: 10px;
