--- a/chatclient/chat-app/src/index.css
+++ b/chatclient/chat-app/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color:lavender;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -13,18 +14,27 @@ code {
 }
 
 input {
+  min-width: 300px;
   padding: 10px;
   font-size: 1.2em;
 }
 button{
   border: none;
+  border-radius: 3px;
+  border: 1px solid rgba(27, 31, 35, .15);
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
   padding: 10px;
-  background: green;
+  background-color: #128C7E;
   color:#fff;
   font-size: 1.2em;
   font-weight: bold;
 }
 
+.heading{
+ margin-left: 50%;
+ font-size: 1.5em;
+}
 
 .container{
   position: relative;
@@ -32,10 +42,11 @@ button{
 
 .register{
   position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -90%);
   padding:30px;
   box-shadow:0 2.8px 2.2px rgba(0, 0, 0, 0.034),0 6.7px 5.3px rgba(0, 0, 0, 0.048),0 12.5px 10px rgba(0, 0, 0, 0.06),0 22.3px 17.9px rgba(0, 0, 0, 0.072),0 41.8px 33.4px rgba(0, 0, 0, 0.086),0 100px 80px rgba(0, 0, 0, 0.12);
-  top:35%;
-  left:32%;
   display: flex;
   flex-direction: row;
 }
@@ -61,7 +72,11 @@ button{
   height: 80%;
   border: 1px solid #000;
   overflow-y: scroll;
+  max-width: 100%;
+  word-break: break-word;
 }
+
+
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -89,9 +104,13 @@ ul {
   list-style-type: none;
 }
 
+.members{
+  overflow-y: scroll;
+}
+
 .send-button {
   appearance: none;
-  background-color: #2ea44f;
+  background-color: #128C7E;
   border: 1px solid rgba(27, 31, 35, .15);
   box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
   box-sizing: border-box;
@@ -118,8 +137,8 @@ ul {
   outline: none;
 }
 
-.send-button:hover {
-  background-color: #2c974b;
+button:hover {
+  background-color: #075E54;
 }
 
 .send-button:focus {
@@ -147,11 +166,11 @@ ul {
   box-shadow: 0 8px 8px -4px lightblue;
 }
 .member.active{
-  background: blueviolet;
+  background: #128C7E;
   color:#fff;
 }
 .member:hover{
-  background: grey;
+  background: #075E54;
   color:#fff;
 }
 
@@ -160,10 +179,15 @@ ul {
   padding: 3px 5px;
   border-radius: 5px;
   color:#fff;
+  min-width: 40px;
 }
 .avatar.self{
+  display: flex;
+  align-items: center;
+  padding-left: 10xpx;
+  min-width: 30px;
   color:#000;
-  background-color: greenyellow;
+  background-color: #128C7E;
 }
 .message{
   padding:5px;
