--- a/chatclient/chat-app/src/index.css
+++ b/chatclient/chat-app/src/index.css
@@ -163,13 +163,16 @@ button:hover {
   border:#000;
   cursor: pointer;
   margin: 5px 2px;
-  box-shadow: 0 8px 8px -4px lightblue;
 }
 .member.active{
   background: #128C7E;
   color:#fff;
+  box-shadow: 0 8px 8px -4px lightblue;
 }
-.member:hover{
+.member.false{
+  box-shadow: 0 8px 8px -4px lightblue;
+}
+.member.false:hover{
   background: #075E54;
   color:#fff;
 }
